--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,3 +1,24 @@
+/* cyrillic */
+@font-face {
+  font-family: "Bad Script";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(/font/6NUT8F6PJgbFWQn47_x7pO8kzP9Ddt2Wew.woff2) format("woff2");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* latin */
+@font-face {
+  font-family: "Bad Script";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(/font/6NUT8F6PJgbFWQn47_x7pOskzP9Ddt0.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
 .header {
   height: 70px;
   border-bottom: 1px solid #000;
@@ -5,14 +26,15 @@
 
 .headerContainer {
   width: 80%;
-  height: 80px;
+  height: 70px;
   margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.headerContainer h1 {
+.headerContainer h1 a {
+  font-family: "Bad Script", cursive;
 }
 
 .headerContainer img {
