--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -16,6 +16,12 @@
   letter-spacing: 2px;
 }
 
+.tagArea .tagList a {
+  color: blue;
+  border-bottom: solid 1px blue;
+  line-height: 20px;
+}
+
 .detailContent h1 {
   border-bottom: solid 1px #aaa;
 }
@@ -40,6 +46,7 @@
 
 .detailContent a {
   color: blue;
+  border-bottom: solid 1px blue;
 }
 
 @media screen and (min-width: 1026px) {
@@ -56,6 +63,13 @@
     background-color: #fff;
     border-radius: 20px;
     padding: 1%;
+  }
+
+  .snsArea {
+    width: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .tagArea {
@@ -103,7 +117,7 @@
     width: 100%;
     background-color: #fff;
     padding: 1%;
-    order: 1;
+    order: 2;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
@@ -113,6 +127,13 @@
     background-color: #fff;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    order: 1;
+  }
+
+  .snsArea {
+    margin-left: auto;
+    display: flex;
+    order: 3;
   }
 
   .tagArea .tagList {
@@ -162,7 +183,7 @@
     width: 100%;
     background-color: #fff;
     padding: 1%;
-    order: 1;
+    order: 2;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
   }
@@ -172,6 +193,13 @@
     background-color: #fff;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    order: 1;
+  }
+
+  .snsArea {
+    margin-left: auto;
+    display: flex;
+    order: 3;
   }
 
   .tagArea .tagList {
