--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -1,4 +1,5 @@
 .detail {
+  word-break: break-all;
   padding-top: 5%;
   padding-bottom: 3%;
   background: #e0efff;
@@ -33,6 +34,7 @@
 .detailContent pre {
   background-color: #222;
   padding: 1.5%;
+  overflow: auto;
 }
 
 .detailContent pre code {
