--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -23,10 +23,10 @@
 }
 
 .title {
-  text-align: left;
-  font-size: 14px;
+  height: 50px;
 }
 
-.body {
+.title h2 {
+  font-size: 17px;
   text-align: left;
 }
