--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -39,20 +39,29 @@
   font-family: "Bad Script", cursive;
 }
 
-.navi {
-  width: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+@media screen and (min-width: 1026px) {
+  .navi {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
 
-.headerContainer img {
-  margin-top: 20px;
-  border-radius: 50%;
-  box-shadow: 22px 16px 27px -3px rgba(0, 0, 0, 0.6);
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .navi {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
 
-.headerContainer img:hover {
-  border-radius: 50%;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.6);
+@media screen and (max-width: 481px) {
+  .navi {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
