--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -24,10 +24,12 @@
 }
 
 .detailContent h1 {
+  font-size: 30px;
   border-bottom: solid 1px #aaa;
 }
 
 .detailContent h2 {
+  font-size: 25px;
   border-bottom: solid 1px #aaa;
 }
 
@@ -38,6 +40,7 @@
 }
 
 .detailContent pre code {
+  font-size: 18px;
   font-style: normal;
   color: #e0efff;
 }
@@ -51,6 +54,27 @@
   border-bottom: solid 1px blue;
 }
 
+.detailContent p {
+  font-size: 18px;
+  letter-spacing: 1px;
+  line-height: 3.5vh;
+}
+
+.detailContent li {
+  font-size: 18px;
+  letter-spacing: 1px;
+  line-height: 4.5vh;
+}
+
+.center {
+  text-align: center;
+}
+
+.tagArea h1 {
+  font-size: 28px;
+  letter-spacing: 1px;
+  color: #222;
+}
 @media screen and (min-width: 1026px) {
   .mainContents {
     width: 80%;
@@ -64,7 +88,10 @@
     width: 65%;
     background-color: #fff;
     border-radius: 20px;
-    padding: 1%;
+    padding-top: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 1%;
   }
 
   .snsArea {
@@ -118,7 +145,10 @@
     letter-spacing: 1px;
     width: 100%;
     background-color: #fff;
-    padding: 1%;
+    padding-top: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 5%;
     order: 2;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -130,6 +160,11 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     order: 1;
+    padding-top: 5%;
+  }
+
+  .tagArea h1 {
+    display: none;
   }
 
   .snsArea {
@@ -146,7 +181,7 @@
   }
 
   .dateArea {
-    width: 60%;
+    width: 65%;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -184,18 +219,27 @@
     letter-spacing: 1px;
     width: 100%;
     background-color: #fff;
-    padding: 1%;
+    padding-top: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 5%;
     order: 2;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
   }
 
   .tagArea {
+    padding-top: 5%;
+    text-align: center;
     width: 100%;
     background-color: #fff;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     order: 1;
+  }
+
+  .tagArea h1 {
+    display: none;
   }
 
   .snsArea {
@@ -209,6 +253,12 @@
     justify-content: space-around;
     flex-flow: row;
     flex-wrap: wrap;
+  }
+
+  .tag {
+    width: 33%;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .dateArea {
