--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -19,19 +19,17 @@
     U+FEFF, U+FFFD;
 }
 
+.about {
+  display: block;
+  padding: 10px;
+  background-color: #5bbee5;
+  border-radius: 3px;
+  color: white;
+}
+
 .header {
   height: 70px;
   border-bottom: 1px solid #000;
-}
-
-.headerContainer {
-  margin-top: 20px;
-  width: 80%;
-  height: 70px;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .headerContainer h3 {
@@ -40,6 +38,16 @@
 }
 
 @media screen and (min-width: 1026px) {
+  .headerContainer {
+    margin-top: 20px;
+    width: 80%;
+    height: 70px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .navi {
     width: 20%;
     display: flex;
@@ -49,6 +57,16 @@
 }
 
 @media screen and (min-width: 482px) and (max-width: 1025px) {
+  .headerContainer {
+    margin-top: 20px;
+    width: 80%;
+    height: 70px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .navi {
     width: 30%;
     display: flex;
@@ -58,8 +76,18 @@
 }
 
 @media screen and (max-width: 481px) {
+  .headerContainer {
+    margin-top: 20px;
+    width: 95%;
+    height: 70px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .navi {
-    width: 50%;
+    width: 40%;
     display: flex;
     align-items: center;
     justify-content: space-around;
