--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,50 @@
-.main {
-  min-height: calc(100vh - 140px);
-  display: flex;
-  flex-flow: row;
-  flex-wrap: wrap;
-  width: 85%;
-  margin: auto;
-  text-align: center;
+@media screen and (min-width: 1026px) {
+  .main {
+    min-height: calc(100vh - 140px);
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    width: 85%;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .main {
+    min-height: calc(100vh - 140px);
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    width: 85%;
+    margin: auto;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+  }
+
+  .main {
+    min-height: calc(100vh - 140px);
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    width: 85%;
+    margin: auto;
+    text-align: center;
+    order: 1;
+  }
 }
