--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -86,15 +86,15 @@
 
 @media screen and (max-width: 481px) {
   .card {
-    margin-top: 20px;
-    width: 250px;
-    height: 350px;
+    margin-top: 10px;
+    width: 350px;
+    height: 380px;
     border: solid 1px #000;
     box-shadow: 22px 16px 27px -3px rgba(0, 0, 0, 0.6);
     border-radius: 20px;
     margin-left: 25px;
     margin-right: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 
   .thumbnail {
@@ -105,7 +105,7 @@
   .thumbnail img {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    width: 100% !important;
+    width: 348px !important;
     height: 219px !important;
   }
 
