--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,28 +2,27 @@
   .main {
     min-height: calc(100vh - 140px);
     display: flex;
-    flex-flow: row;
     flex-wrap: wrap;
-    width: 85%;
+    width: 1000px;
+    justify-content: space-between;
     margin: auto;
     text-align: center;
     margin-bottom: 20px;
   }
+  .main::after {
+    display: block;
+    content: "";
+    width: 300px;
+  }
 }
 
 @media screen and (min-width: 482px) and (max-width: 1025px) {
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-
   .main {
     min-height: calc(100vh - 140px);
     display: flex;
-    flex-flow: row;
     flex-wrap: wrap;
-    width: 85%;
+    justify-content: space-between;
+    width: 700px;
     margin: auto;
     text-align: center;
   }
