--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,13 +1,11 @@
 @media screen and (min-width: 1025px) {
   .card {
     margin-top: 20px;
-    width: 250px;
+    width: 300px;
     height: 320px;
     border: solid 1px #000;
     box-shadow: 22px 16px 27px -3px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
-    margin-left: 25px;
-    margin-right: 25px;
   }
 
   .thumbnail {
@@ -18,7 +16,7 @@
   .thumbnail img {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    width: 100% !important;
+    width: 399px !important;
     height: 199px !important;
   }
 
@@ -44,13 +42,11 @@
 @media screen and (min-width: 482px) and (max-width: 1025px) {
   .card {
     margin-top: 20px;
-    width: 40%;
+    width: 320px;
     height: 400px;
     border: solid 1px #000;
     box-shadow: 22px 16px 27px -3px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
-    margin-left: 25px;
-    margin-right: 25px;
   }
 
   .thumbnail {
@@ -61,7 +57,7 @@
   .thumbnail img {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    width: 100% !important;
+    width: 319px !important;
     height: 249px !important;
   }
 
