--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -2,7 +2,7 @@
   word-break: break-all;
   padding-top: 5%;
   padding-bottom: 3%;
-  background: #e0efff;
+  background-color: #e0efff;
 }
 
 .detailHeader {
@@ -15,6 +15,14 @@
 .detailTtl {
   font-size: 2em;
   letter-spacing: 2px;
+}
+
+.thumbnail {
+  width: 100px;
+  height: 80px;
+  border: solid 1px #000;
+  margin: 0 auto;
+  background-color: #fff;
 }
 
 .tagArea .tagList a {
