--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -6,11 +6,7 @@
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  background: linear-gradient(to left, #5bbee4 0%, #52eac1 100%);
+  color: #fff;
+  font-size: 22px;
 }
