--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -22,18 +22,27 @@
 .about {
   display: block;
   padding: 10px;
-  background-color: #5bbee5;
+  background-color: #fff;
   border-radius: 3px;
-  color: white;
+  color: #5bbee5;
+  box-shadow: 0px 8px 16px -2px rgba(10, 10, 10, 0.1),
+    13px 14px 8px 1px rgba(10, 10, 10, 0.02);
+}
+
+.about:hover {
+  transform: translate(0, -2.5px);
 }
 
 .header {
+  background: linear-gradient(to right, #5bbee4 0%, #52eac1 100%);
   height: 70px;
   border-bottom: 1px solid #000;
 }
 
 .headerContainer h3 {
-  font-size: 18px;
+  color: #fff;
+  font-weight: 900;
+  font-size: 25px;
   font-family: "Bad Script", cursive;
 }
 
