--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
     min-height: calc(100vh - 160px);
     display: flex;
     flex-wrap: wrap;
-    width: 950px;
+    width: 1100px;
     justify-content: space-between;
     margin: auto;
     text-align: center;
@@ -12,7 +12,7 @@
   .main::after {
     display: block;
     content: "";
-    width: 300px;
+    width: 350px;
   }
 }
 
@@ -22,7 +22,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 90%;
+    width: 95%;
     margin: auto;
     text-align: center;
   }
@@ -37,11 +37,9 @@
   .main {
     min-height: calc(100vh - 140px);
     display: flex;
-    flex-flow: row;
     flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
-    margin: auto;
     text-align: center;
-    order: 1;
   }
 }
