--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -164,7 +164,7 @@
   .main {
     display: flex;
     flex-wrap: wrap;
-    width: 980px;
+    width: 1100px;
     justify-content: space-between;
     margin: auto;
     text-align: center;
@@ -352,10 +352,9 @@
 
   .main {
     display: flex;
-    flex-flow: row;
     flex-wrap: wrap;
     width: 100%;
-    margin: auto;
+    justify-content: center;
     text-align: center;
   }
 }
