--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,27 +1,31 @@
+.publishedAt {
+  text-align: right;
+  margin-right: 5px;
+}
+
 @media screen and (min-width: 1025px) {
   .card {
     background-color: #fff;
     margin-top: 20px;
-    width: 300px;
-    height: 330px;
+    width: 350px;
+    height: 380px;
     border: solid 1px #000;
-    box-shadow: 0px 8px 16px -2px rgba(10, 10, 10, 0.1),
-      13px 14px 8px 1px rgba(10, 10, 10, 0.02);
-    border-radius: 5px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
   }
 
   .thumbnail {
-    height: 200px;
-    border-bottom: solid 1px #000;
+    height: 250px;
+    border-bottom: solid 2px #000;
   }
 
   .thumbnail img {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    width: 399px !important;
-    height: 199px !important;
+    border-radius: 8px 8px 0 0;
   }
 
+  .title {
+    height: 35px;
+  }
   .tags {
     display: flex;
     align-items: flex-end;
@@ -45,31 +49,33 @@
   .card {
     background-color: #fff;
     margin-top: 20px;
-    width: 31%;
-    height: 350px;
+    width: 30vw;
+    height: 355px;
     border: solid 1px #000;
-    box-shadow: 0px 8px 16px -2px rgba(10, 10, 10, 0.1),
-      13px 14px 8px 1px rgba(10, 10, 10, 0.02);
-    border-radius: 5px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
   }
 
   .thumbnail {
-    height: 180px;
+    height: 200px;
     border-bottom: solid 1px #000;
   }
 
   .thumbnail img {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    width: cakc(32% - 1px) !important;
-    height: 179px !important;
+    border-radius: 8px 8px 0 0;
+    height: 199px !important;
+    width: 30vw !important;
+  }
+
+  .title {
+    height: 50px;
   }
 
   .tags {
     display: flex;
     align-items: flex-end;
     flex-wrap: wrap;
-    height: 30px;
+    height: 40px;
   }
 
   .tag {
@@ -89,33 +95,31 @@
     background-color: #fff;
     margin-top: 10px;
     width: 350px;
-    height: 350px;
+    height: 400px;
     border: solid 1px #000;
-    box-shadow: 0px 8px 16px -2px rgba(10, 10, 10, 0.1),
-      13px 14px 8px 1px rgba(10, 10, 10, 0.02);
-    border-radius: 5px;
-    margin-left: 25px;
-    margin-right: 25px;
+    box-shadow: 0 4px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
     margin-bottom: 10px;
   }
 
   .thumbnail {
-    height: 220px;
+    height: 250px;
     border-bottom: solid 1px #000;
   }
 
   .thumbnail img {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    width: 348px !important;
-    height: 219px !important;
+    border-radius: 8px 8px 0 0;
+  }
+
+  .title {
+    height: 40px;
   }
 
   .tags {
     display: flex;
     align-items: flex-end;
     flex-wrap: wrap;
-    height: 30px;
+    height: 40px;
   }
 
   .tag {
