--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -19,7 +19,7 @@
 
 .thumbnail {
   width: 100px;
-  height: 82px;
+  height: 80.5px;
   border: solid 1px #000;
   margin: 0 auto;
   background-color: #fff;
@@ -164,7 +164,7 @@
   .main {
     display: flex;
     flex-wrap: wrap;
-    width: 980px;
+    width: 1100px;
     justify-content: space-between;
     margin: auto;
     text-align: center;
@@ -352,10 +352,9 @@
 
   .main {
     display: flex;
-    flex-flow: row;
     flex-wrap: wrap;
     width: 100%;
-    margin: auto;
+    justify-content: center;
     text-align: center;
   }
 }
