--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -12,6 +12,7 @@
     border: solid 1px #000;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
+    cursor: pointer;
   }
 
   .thumbnail {
@@ -54,6 +55,7 @@
     border: solid 1px #000;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
+    cursor: pointer;
   }
 
   .thumbnail {
@@ -100,6 +102,7 @@
     box-shadow: 0 4px 25px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     margin-bottom: 10px;
+    cursor: pointer;
   }
 
   .thumbnail {
