--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -46,6 +46,14 @@
   font-family: "Bad Script", cursive;
 }
 
+.search {
+  cursor: pointer;
+}
+
+.search:hover {
+  transform: scale(1.2);
+}
+
 @media screen and (min-width: 1026px) {
   .headerContainer {
     margin-top: 20px;
