--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -34,13 +34,14 @@
 }
 
 .header {
-  background: linear-gradient(to right, #5bbee4 0%, #52eac1 100%);
+  /* background: linear-gradient(to right, #5bbee4 0%, #52eac1 100%); */
+  background: var(--color-background);
   height: 70px;
   border-bottom: 1px solid #000;
 }
 
 .headerContainer h3 {
-  color: #fff;
+  color: var(--color-text);
   font-weight: 900;
   font-size: 25px;
   font-family: "Bad Script", cursive;
