--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -8,7 +8,7 @@
     background-color: #fff;
     margin-top: 20px;
     width: 350px;
-    height: 380px;
+    height: 350px;
     border: solid 1px #000;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
@@ -16,7 +16,7 @@
   }
 
   .thumbnail {
-    height: 250px;
+    height: 200px;
     border-bottom: solid 2px #000;
   }
 
@@ -27,11 +27,12 @@
   .title {
     height: 35px;
   }
+
   .tags {
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     flex-wrap: wrap;
-    height: 30px;
+    height: 50px;
   }
 
   .tag {
@@ -51,7 +52,7 @@
     background-color: #fff;
     margin-top: 20px;
     width: 30vw;
-    height: 355px;
+    height: 310px;
     border: solid 1px #000;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
@@ -59,13 +60,16 @@
   }
 
   .thumbnail {
-    height: 200px;
+    height: 140px;
     border-bottom: solid 1px #000;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 
   .thumbnail img {
     border-radius: 8px 8px 0 0;
-    height: 199px !important;
+    height: 139px !important;
     width: 30vw !important;
   }
 
@@ -75,9 +79,9 @@
 
   .tags {
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     flex-wrap: wrap;
-    height: 40px;
+    height: 50px;
   }
 
   .tag {
@@ -97,7 +101,7 @@
     background-color: #fff;
     margin-top: 10px;
     width: 350px;
-    height: 400px;
+    height: 360px;
     border: solid 1px #000;
     box-shadow: 0 4px 25px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
@@ -106,7 +110,7 @@
   }
 
   .thumbnail {
-    height: 250px;
+    height: 200px;
     border-bottom: solid 1px #000;
   }
 
@@ -120,7 +124,7 @@
 
   .tags {
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     flex-wrap: wrap;
     height: 40px;
   }
