--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -34,17 +34,66 @@
 }
 
 .header {
-  /* background: linear-gradient(to right, #5bbee4 0%, #52eac1 100%); */
-  background: var(--color-background);
+  background: linear-gradient(to right, #5bbee4 20%, #52eac1 80%);
   height: 70px;
   border-bottom: 1px solid #000;
 }
 
+.headerContainer {
+  margin-top: 20px;
+  height: 70px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media screen and (min-width: 1026px) {
+  .headerContainer {
+    width: 1000px;
+  }
+}
+
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .headerContainer {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  .headerContainer {
+    width: 95%;
+  }
+}
+
 .headerContainer h3 {
-  color: var(--color-text);
-  font-weight: 900;
+  color: #fff;
+  font-weight: bold;
   font-size: 25px;
   font-family: "Bad Script", cursive;
+}
+
+.navi {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+@media screen and (min-width: 1026px) {
+  .navi {
+    width: 20%;
+  }
+}
+
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .navi {
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  .navi {
+    width: 40%;
+  }
 }
 
 .search {
@@ -53,61 +102,4 @@
 
 .search:hover {
   transform: scale(1.2);
-}
-
-@media screen and (min-width: 1026px) {
-  .headerContainer {
-    margin-top: 20px;
-    width: 1000px;
-    height: 70px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .navi {
-    width: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (min-width: 482px) and (max-width: 1025px) {
-  .headerContainer {
-    margin-top: 20px;
-    width: 600px;
-    height: 70px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .navi {
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 481px) {
-  .headerContainer {
-    margin-top: 20px;
-    width: 95%;
-    height: 70px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .navi {
-    width: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
 }
