--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,46 +1,50 @@
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
 @media screen and (min-width: 1026px) {
   .main {
     min-height: calc(100vh - 160px);
-    display: flex;
-    flex-wrap: wrap;
     width: 1100px;
     justify-content: space-between;
     margin: auto;
-    text-align: center;
     margin-bottom: 20px;
-  }
-  .main::after {
-    display: block;
-    content: "";
-    width: 350px;
   }
 }
 
 @media screen and (min-width: 482px) and (max-width: 1025px) {
   .main {
     min-height: calc(100vh - 140px);
-    display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     width: 95%;
     margin: auto;
-    text-align: center;
-  }
-  .main::after {
-    display: block;
-    content: "";
-    width: 31%;
   }
 }
 
 @media screen and (max-width: 481px) {
   .main {
     min-height: calc(100vh - 140px);
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-    text-align: center;
     margin-top: 5px;
+  }
+}
+
+.main::after {
+  display: block;
+  content: "";
+}
+
+@media screen and (min-width: 1026px) {
+  .main::after {
+    width: 350px;
+  }
+}
+
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .main::after {
+    width: 31%;
   }
 }
