--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,10 @@
-:root {
-  --color-background: linear-gradient(to right, #5bbee4 0%, #52eac1 100%);
-  --color-text: #eee;
-  --border-bottom: 1px solid #000;
-}
-
-[data-theme="dark"] {
-  --color-background: #22212b;
-  --color-text: #ffffee;
-  --border-bottom: 1px solid #fff;
-}
-
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: var(--color-background);
+  background-color: white;
 }
 
 a {
@@ -28,6 +16,7 @@ a {
   box-sizing: border-box;
 }
 
+/* 目次 */
 #list-h1 {
   font-size: 1.2em;
   list-style: square;
