--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -39,13 +39,11 @@
 
 .publishedAt {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
 .revisedAt {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -55,15 +53,11 @@
   }
 
   .publishedAt {
-    width: 200px;
+    gap: 10px;
   }
 
   .revisedAt {
-    width: 200px;
-  }
-
-  .sideBar {
-    width: 350px;
+    gap: 10px;
   }
 }
 
@@ -73,34 +67,25 @@
   }
 
   .publishedAt {
-    width: 200px;
+    gap: 15px;
   }
 
   .revisedAt {
-    width: 200px;
-  }
-
-  .sideBar {
-    width: 100%;
+    gap: 15px;
   }
 }
 
 @media screen and (max-width: 481px) {
   .dateArea {
-    width: 100%;
+    width: 98%;
   }
 
   .publishedAt {
-    font-size: 1em;
-    width: 180px;
+    gap: 3px;
   }
 
   .revisedAt {
-    width: 180px;
-  }
-
-  .sideBar {
-    width: 100%;
+    gap: 3px;
   }
 }
 
