--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,53 +1,50 @@
 .card {
   position: relative;
-  border: solid 1px #000;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-  border-radius: 8px;
   cursor: pointer;
   background-color: #fff;
 }
 
 @media screen and (min-width: 1025px) {
   .card {
-    margin-top: 20px;
+    margin: 20px 0 10px 0;
     width: 350px;
+    height: 380px;
   }
 }
 
 @media screen and (min-width: 482px) and (max-width: 1025px) {
   .card {
-    margin-top: 20px;
+    margin: 20px 0 0 0;
     width: 30vw;
+    height: 310px;
   }
 }
 
 @media screen and (max-width: 481px) {
   .card {
-    margin-top: 10px;
+    margin: 10px 0 20px 0;
     width: 350px;
-    margin-bottom: 10px;
+    height: 360px;
   }
 }
 
 .card:hover {
-  box-shadow: 0 0 0 white;
   transform: translate(0, -5.5px);
 }
 
 .thumbnail {
-  border-bottom: solid 1px #000;
-}
-
-.thumbnail img {
-  border-radius: 8px 8px 0 0;
+  border: solid 1px #000;
 }
 
 .title h2 {
   font-size: 17px;
   text-align: left;
+  padding-left: 8px;
 }
 
 .tags {
+  margin-left: -40px;
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
@@ -77,9 +74,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 4px;
-  margin-left: 8px;
-  margin-bottom: 4px;
+  margin: 0 4px 4px 8px;
   padding: 2px;
 }
 
