--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -2,7 +2,7 @@
   word-break: break-all;
   padding-top: 5%;
   padding-bottom: 3%;
-  background-color: #e0efff;
+  background-color: #ebf7fc;
 }
 
 /* 
