--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -2,7 +2,7 @@
   word-break: break-all;
   padding-top: 5%;
   padding-bottom: 3%;
-  background-color: #e0efff;
+  background-color: #ebf7fc;
 }
 
 /* 
@@ -23,7 +23,7 @@
 
 .thumbnail {
   width: 100px;
-  height: 80.5px;
+  height: 80.6px;
   border: solid 1px #000;
   margin: 0 auto;
   background-color: #fff;
