--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -311,3 +311,10 @@
 .detailContent img {
   max-width: 100%;
 }
+
+.detailContent blockquote {
+  border-left: 5px solid #999;
+  padding-left: 20px;
+  font-style: italic;
+  color: #888;
+}
