--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -98,6 +98,9 @@
     width: 10px;
     flex-direction: column;
     align-items: center;
+    height: 100px;
+    position: sticky;
+    top: 0;
   }
 }
 
