--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,137 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Bad+Script&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer utilities {
+  .webkit-line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+
+  .animate-open {
+    transition: all 0.5s ease;
+    animation-name: open;
+    animation-duration: 1s;
+  }
+
+  @keyframes open {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* マークダウン */
+.markdown h1 {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  border-bottom: solid 1px #aaa;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 15px;
 }
 
-ul {
-  margin: 0;
+.markdown h2 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  border-bottom: solid 1px #aaa;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 15px;
 }
 
-li {
-  list-style: none;
+.markdown h3 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: bold;
+  margin-top: 15px;
+  margin-bottom: 20px;
 }
 
-* {
-  box-sizing: border-box;
+.markdown h4 {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: bold;
+  margin-bottom: 18px;
+  margin-top: 13px;
+}
+
+.markdown h5 {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 14px;
+  margin-top: 9px;
+}
+
+.markdown pre {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  background-color: #222;
+  padding: 1.5%;
+  overflow: auto;
+}
+
+.markdown pre code {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  background-color: transparent;
+  font-style: normal;
+  color: #e0efff;
+}
+
+.markdown code {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  background-color: #eee;
+  color: rgb(224, 120, 120);
+  font-style: italic;
+}
+
+.markdown a {
+  display: inline-block;
+  word-break: break-all;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin-bottom: 10px;
+  color: blue;
+  border-bottom: solid 1px blue;
+}
+
+.markdown p {
+  word-break: break-all;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 1px;
+}
+
+.markdown ul {
+  padding-left: 5%;
+}
+
+.markdown li {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 1px;
+  list-style-type: disc;
+}
+
+.markdown img {
+  max-width: 100%;
+}
+
+.markdown blockquote {
+  border-left: 5px solid #999;
+  padding-left: 20px;
+  font-style: italic;
+  color: #888;
+}
+
+.markdown iframe {
+  width: 100%;
 }
